fix: removing background configuration only for dark mode, changing it to be the default of the page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,16 @@ html {
   padding: 0;
   margin: 0;
   background-color: rgba(217, 217, 217, 0.20);
+  color-scheme: dark;
 }
 
 body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  color: white;
+  background: #262F36;
+
 }
 
 a {
@@ -31,15 +35,5 @@ h6 {
 @media (min-width: 600px) {
   h2 {
     font-size: 2.0vmax;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: #262F36;
   }
 }
